--- a/EmployeeApp/src/index.html
+++ b/EmployeeApp/src/index.html
@@ -1,6 +1,12 @@
 <!doctype html>
 <html>
 <head>
+    <style>
+    body{
+      padding:0;
+      margin:0;
+    }
+    </style>
   <meta charset="utf-8">
   <title>EmployeeApp</title>
   <base href="/">
